--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,13 @@
         "preview": {
             "distribution": "internal"
         },
-        "production": {}
+        "production": {
+            "env": {
+                "EXPO_PUBLIC_SITE_URL": "https://soundscape-psi.vercel.app",
+                "EXPO_PUBLIC_SONG_DEFAULT_IMAGE": "https://i.pinimg.com/736x/34/ed/52/34ed521321f95f3739756671efb97446.jpg",
+                "EXPO_PUBLIC_SONG_BACKEND_URL": "https://soundscape-backend-api.vercel.app/api/songs/"
+            }
+        }
     },
     "submit": {
         "production": {}
